<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joan.brainallydiary.Pantalla_Perfils_Infants_Registrar2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cpi2_Guardar"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/btn_Guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ListView
                android:id="@+id/listView_cpi2_Medicines"
                android:layout_width="344dp"
                android:layout_height="195dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cpi2_Guardar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_cpi2_Medicines" />

            <Button
                android:id="@+id/btn_cpi2_Afegir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Afegir"
                app:layout_constraintStart_toEndOf="@+id/txt_cpi2_Medicines"
                app:layout_constraintTop_toTopOf="@+id/txt_cpi2_Medicines" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Dades_Mediques"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_cpi2_TrastornPrincipal"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/Trastorn_Principal"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/Trastorn_Principal"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="Medicines:"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/txt_cpi2_Medicines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Medicina"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Introdueix les medicines que haurà de prendre"
                app:layout_constraintStart_toStartOf="@+id/textView30"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:text="Atenció: En aquesta fase del projecte les medicines no es podran esborrar ni editar."
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintStart_toStartOf="@+id/textView32"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
